fix overflow container

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  overflow: hidden !important;
+}
+
 .App {
   text-align: center;
 }
